@@ -738,6 +738,8 @@ x^6 + 10/7*x^5 - 867/49*x^4 - 76/245*x^3 + 3148/35*x^2 - 25944/245*x + 48771
 10
 [x + (-314226370217524044*y + 1473852319020386314), x + (314226370217524044*
 y - 1473852319020386314)]~
+[x - 2*y, x - y, x + y, x + 2*y]~
+[x - y, x + y]~
 [0]
 [-1/2]
 [-1/2, 1/2]
@@ -767,4 +769,4 @@ y - 1473852319020386314)]~
   ***   at top-level: polhensellift(x^2+x+1,[x+a,x+a+1],2,10)
   ***                 ^---------------------------------------
   *** polhensellift: incorrect type in polhensellift [not in Z[X]] (t_POL).
-Total time spent: 9405
+Total time spent: 9520
