@@ -108,6 +108,10 @@ test(polcyclo(211),18446744073709551667)
 
 do(y^2-22,x^2+926246528884912528275985458927067632*y-4344481316563541186659879867597013188)
 
+nf = nfinit(y^2+1);
+do(nf,(x^2+4)/(x^2+1)^2)
+do(nf,y/(x^2+1)^2)
+
 nfroots(a^2+1,x^2)
 nfroots(,x+1/2)
 nfroots(,x^2-1/4)
